# fcitx5-quwei

./: CMakeLists.txt
src/: CMakeLists.txt  quwei-addon.conf.in  quwei.conf  quwei.cpp  quwei.h
